deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pole-system
  labels:
    app.kubernetes.io/part-of: pole
