deploy/kubernetes/mysql-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pole-mysql
  namespace: pole-system
  labels:
    app.kubernetes.io/name: pole-mysql
    app.kubernetes.io/part-of: pole
spec:
  type: ExternalName
  externalName: host.docker.internal
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
